updated contact page
contact page updated with links attached

--- a/contact.html
+++ b/contact.html
@@ -54,16 +54,16 @@
 
 <section>
   <div class="arms">
-    <img src="IMG_8230 2.jpg" alt="vivian">
+    <img src="grad pic.jpg" alt="vivian">
     <div class="title">
-      <h1>Let's connect and be friends! 🤠</h1>
+      <h1>Let's connect & be friends! 🤠</h1>
     </div>
    <div class="heading3"> 
      <h3>Ways to contact me </h3>
-     <h5>linkedin : https://www.linkedin.com/in/vivianchiang-20/ </h5>
-     <h5>email : vivianchiang99@gmail.com</h5>
-     <h5>youtube : @chiangishh </h5>
-     <h5>instagram: @vifitzs </h5>
+     <h5><a href="https://www.linkedin.com/in/vivianchiang-20/ "> LinkedIn</a></h5>
+     <h5><a href="youtube.com/@chiangishh"> YouTube</a></h5>
+     <h5><a href="https://www.instagram.com/vifitzs/">Instagram</a> </h5>
+     <h5><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0aqXU-u_lgeX0d09rjhMMrslwX-QzOO6q9Q&usqp=CAU">A surprise!</a></h5>
  
    </div>
   </div>
