--- a/resume.html
+++ b/resume.html
@@ -44,19 +44,18 @@
           <p>resume</p>
         </a>
       </div>
-      <!-- <div id="contact">
+      <div id="contact">
         <a href="contact.html">
         <p>contact</p>
-      </div> -->
+      </div>
     </div>
   </nav>
+
   <div class="resume">
     <iframe src="VIVIAN CHIANG_Resume 2023.pdf#toolbar=0" width="100%" height="1000px">
     </iframe>
   </body>
   </div>
-
-
 
 
 
