--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,12 @@
       <h1>Let's connect & be friends! 🤠</h1>
     </div>
    <div class="heading3"> 
-     <h3>Ways to contact me </h3>
+     <h4>Please open me in new tabs... </h4>
+     <p></p>
      <h5><a href="https://www.linkedin.com/in/vivianchiang-20/ "> LinkedIn</a></h5>
      <h5><a href="youtube.com/@chiangishh"> YouTube</a></h5>
-     <h5><a href="https://www.instagram.com/vifitzs/">Instagram</a> </h5>
-     <h5><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0aqXU-u_lgeX0d09rjhMMrslwX-QzOO6q9Q&usqp=CAU">A surprise!</a></h5>
+     <h5><a href="https://www.instagram.com/vifitzs/">Instagram</a></h5>
+     <h5><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0aqXU-u_lgeX0d09rjhMMrslwX-QzOO6q9Q&usqp=CAU"> a surprise!</a></h5>
  
    </div>
   </div>
