updated about me and copyright 2023
updated about me and copyright 2023 on vifitz

--- a/about.html
+++ b/about.html
@@ -96,20 +96,19 @@
   <div class="aboutName">
     <h1> ABOUT ME 👋 </h1>
     <div>
-      <h5>你好, Hi there – I’m Vivian Chiang, a UX/UI Designer and UCI graduate student studying Criminology, Law and
-        Society. </h5>
+      <h5>你好, Hi there – I’m Vivian Chiang, a Social Marketer and Designer. </h5>
     </div>
     <div>
       <h5> I was born and raised in sunny Los Angeles, California! Growing up in a non-Asian community has definitely
         taught me how to protect and put myself first. Rather feeling intimidated by societal stereotypes, I decided to
-        adapt a positive and optimistic mindset/outlook!</h5>
+        adapt a positive and optimistic mindset/outlook.</h5>
     </div>
     <div>
-      <h5> After graduating from UC Irvine with a B.A. in Sociology, I wanted to spread positivity and hopefully, reduce
-        stereotypes as much as I can as an individual, which led me to UX/UI. </h5>
+      <h5> After graduating from UC Irvine with a Masters in Criminology, Law & Society & B.A. in Sociology, I wanted to spread positivity and hopefully, reduce
+        stereotypes as much as I can as an individual, which led me to UX/UI and Social Marketing. </h5>
     </div>
     <div>
-      <h5> As a UX/UI Designer, my goal is to deliver bright and empowering designs for users based on their
+      <h5> Evidentally, my goal is to deliver bright and empowering designs & content for users based on their
         feedback and experience with the product(s). </h5>
     </div>
     <div>
@@ -117,7 +116,7 @@
         where I can grow and learn while having fun and designing. </h5>
     </div>
     <div>
-      <h5> Outside of design, I am a fashion enthusiast. I enjoy expressing myself through my Outfit of the Days
+      <h5> Outside of those, I am a fashion enthusiast. I enjoy expressing myself through my Outfit of the Days
         (ootds). I love creating content on YouTube and Instagram for my family, friends, and viewers. </h5>
     </div>
     <div class="social">
