--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h1>VIVIAN CHIANG</h1>
             </div>
             <div id="ux">
-                <h4>UX/UI Designer based in Los Angeles focusing on user research to improve user interaction and
+                <h4>A designer and social marketer based in Los Angeles focusing on user research to improve user interaction and
                     experience</h4>
             </div>
             <div id="check">
