--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <meta property="og:title" content="chiangishh">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="welcome to vivian's portfolio!">
+    <meta property="og:url" content="https://drive.google.com/file/d/1aslzsBlvgpBcxkrOeY_CEcVwaHxVRfSs/view">
+
+
+    
     <link rel="stylesheet" href="stlye.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
